Se creo la estructura de HTML y se agregaron las imagenes al mismo.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 
 <body>
 
+    <div class="container">
+        <div class="row1">
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+        </div>
+        <div class="row2">
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+        </div>
+        <div class="row3">
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
