--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Galeria</title>
 </head>
 
 <body>
 
-    <div class="container">
-        <div class="row1">
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+    <section>
+        <h1>Project</h1>
+        <div class="container">
+            <div class="row1">
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            </div>
+            <div class="row2">
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            </div>
+            <div class="row3">
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+            </div>
         </div>
-        <div class="row2">
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-        </div>
-        <div class="row3">
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-            <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-        </div>
-    </div>
-
+    </section>
 
 </body>
 
