--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <h1>Project</h1>
         <div class="container">
             <div class="row1">
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span>Project1.</span> <img src="./images/imagen3.jpeg" alt=""> </div>
+                <div class="div"><span> Project2.</span><img src="./images/imagen3.jpeg" alt=""> </div>
+                <div class="div"><span>Project3. </span><img src="./images/imagen3.jpeg" alt=""> </div>
             </div>
             <div class="row2">
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> Project4.</span><img src="./images/imagen3.jpeg" alt=""> </div>
+                <div class="div"><span> Project5.</span><img src="./images/imagen3.jpeg" alt=""> </div>
+                <div class="div"><span> Project6.</span><img src="./images/imagen3.jpeg" alt=""> </div>
             </div>
             <div class="row3">
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
-                <div class="div"><span> <img src="./images/imagen3.jpeg" alt=""> </span></div>
+                <div class="div"><span> Project7.</span><img src="./images/imagen3.jpeg" alt=""> </div>
+                <div class="div"><span>Project8.</span> <img src="./images/imagen3.jpeg" alt=""> </div>
+                <div class="div"><span>Project9.</span> <img src="./images/imagen3.jpeg" alt=""> </div>
             </div>
         </div>
     </section>
